# Collate

./: README.md  docker-compose.yml  package-lock.json  package.json  setup-docker.sh
auth-service/: Dockerfile  package-lock.json  package.json  server.js
client/: Dockerfile  electron.tsconfig.json  index.html  nginx-conf  p2p-notebook-setup.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/electron/: auth-handler.ts  main.ts  menu.ts  preload.ts
client/src/: auth.ts  editor.ts  fileManager.ts  main.ts  p2p-collaborative-editor.ts  server-based-editor.ts  styles.css
document-server/: documents.db  package-lock.json  package.json  server.js
p2p-signaling-server/: .env.example  Dockerfile  p2p-signaling-server.js  package-lock.json  package.json
p2p-signaling-server/scripts/: generate-jwt.js
p2p-signaling-server/test/: test-client.html  test-multiple.html
signaling-server/: server.js
tauri-client/: Cargo.toml  creator.py  minimal-build.bat  minimal-build.sh  tauri.conf.json
tauri-client/ui/: index.html
text-editor/: package-lock.json  package.json
text-editor/app/: globals.css  layout.js  page.js
text-editor/app/about/: page.js
text-editor/app/components/: ShareDialog.js  ShareDialog.jsx
text-editor/app/config/: collaboration.js
text-editor/app/hooks/: useDocumentPersistence.js
text-editor/app/join/: page.js
text-editor/app/services/: collabService.js  collaborationMetadataService.js  collaborationService.js  (+1 more)
text-editor/electron/: collaboration-preload.js  main.js  preload.js
text-editor/utils/: yjsUtils.js
(+34 files in other folders)
