[package]
name = "p2p-notebook"
version = "0.1.0"
description = "Simple P2P Notebook Desktop App"
authors = ["Your Name"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
